--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - 11.13.0
 script:
-  - npm install --global workbox-cli
+  - sudo npm install --global workbox-cli
   - workbox generateSW workbox-config.js
 deploy:
   - provider: s3
