--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - 11.13.0
 script:
   - sudo npm install --global workbox-cli
-  - workbox generateSW workbox-config.js
+  - sudo workbox generateSW workbox-config.js
 deploy:
   - provider: s3
     skip_cleanup: true
